fixed img sizing on mobile

--- a/styles/research.css
+++ b/styles/research.css
@@ -18,10 +18,12 @@
 }
 
 .slideshow {
-  border: 0.1rem solid black;
+  max-width: 100%;
+  border: 0.1rem solid rgba(188, 188, 188, 0.8);
 }
 
 .slideshow img {
+  width: 30vw;
   border: 0.1rem solid black;
 }
 
