--- a/styles/structures.css
+++ b/styles/structures.css
@@ -1,5 +1,5 @@
 .content-container img {
-    width: 20rem;
+    width: 30vw;
 }
 
 .content-container span {
